--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 </head>
 <body>
+     <button id="start">Transition</button>
+     <button id="reset">Reset</button>
+
   <div class="container">
     <div id="chart"></div>
   </div>
