Dynamic number, axis labels and styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-     <button id="start">Transition</button>
+     <button id="start">Start</button>
      <button id="reset">Reset</button>
 
   <div class="container">
