--- a/index.html
+++ b/index.html
@@ -10,8 +10,40 @@
 
 </head>
 <body>
-     <button id="start">Start</button>
+     
+  <div class="">
+    <div id="chart"></div>
+
+    <h1> 68.7 % </h1>
+    <h2>Firearms Recovered in Mexico and Submitted to ATF for Tracing in 2016</h2>
+
+ 
+
+    <h2 class = "caption"> Source: ATF Firearms tracing system</h2>
+  <br>  </br>
+  <br>  </br>
+  <br>  </br>
+
+  <h1>60%</h1>
+  <h2>Homicides rose after Assault Weapons Ban</h2>
+  <h2>Source: Cross-Border Spillover: U.S. Gun Laws and Violence in Mexico</h2>
+  <h3>ARINDRAJIT DUBE, OEINDRILA DUBE & OMAR GARCÍA-PONCE </h3>
+  
+  <br>  </br>
+  <br>  </br>
+  <br>  </br>
+
+  <img SRC="Graph1.png" ALT="some text" WIDTH=1200 HEIGHT=700></img>
+  <br>  </br>
+  <br>  </br>
+  <br>  </br>
+
+
+
+
+  <button id="start">Start</button>
      <button id="reset">Reset</button>
+
 
   <div class="container">
     <div id="chart"></div>
