Consolidation of filtering and motion finished

--- a/index.html
+++ b/index.html
@@ -44,10 +44,21 @@
   <br>  </br>
 
 
+    <p>
+      <input type="radio" name="filterPreset" value="all"> All
+      <input type="radio" name="filterPreset" value="dealer"> Dealer
+      <input type="radio" name="filterPreset" value="pawnbroker"> Pawnbroker
+      <input type="radio" name="filterPreset" value="manufacturer_firearms"> Man. Firearms
+      <input type="radio" name="filterPreset" value="manufacturer_ammunition"> Man. Ammunition
+    </p>
+    <h3>After finishing the motion press "restart before beggining a new one"</h3>
+
 
 
   <button id="start">Start</button>
      <button id="reset">Reset</button>
+
+   
 
 
   <div class="container">
