--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   <br>  </br>
   <br>  </br>
   <br>  </br>
+                  <h5>Dynamic Analysis</h5>
 
+    <h4>Select AFT License type</h4>
 
     <p>
       <input type="radio" name="filterPreset" value="all"> All
@@ -51,7 +53,7 @@
       <input type="radio" name="filterPreset" value="manufacturer_firearms"> Man. Firearms
       <input type="radio" name="filterPreset" value="manufacturer_ammunition"> Man. Ammunition
     </p>
-    <h3>After finishing the motion press "restart before beggining a new one"</h3>
+    <h4>Press "reset" before new motion</h4>
 
 
 
